--- a/RecipeMaster/app/build.gradle
+++ b/RecipeMaster/app/build.gradle
@@ -18,6 +18,9 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -26,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    compile 'com.facebook.android:facebook-android-sdk:4.8.2'
 }
